@@ -1,5 +1,11 @@
 2003-02-13  Bastien Nocera  <hadess@hadess.net>
 
+	* modules/ssh-method.c: (ssh_connect), (do_open_directory): don't crash
+	when accessing ssh://, nicer error message when we get a connection
+	refused
+
+2003-02-13  Bastien Nocera  <hadess@hadess.net>
+
 	reviewed by: Alexander Larsson  <alexl@redhat.com>
 
 	* modules/ssh-method.c: (ssh_connect), (ssh_destroy),
